improved modal styles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- modal -->
         <div id="simpleModal" class="mmodal">
             <div class="modal-content">
-                <p></p>
+                <p class="modal-p"></p>
                 <button id="closeBtn">OK</button>
             </div>
         </div>
