--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow|Cantarell|Hind+Guntur|KoHo|Orbitron|Questrial"
         rel="stylesheet">
 
-    <title>Giphy App</title>
+    <title>GifGen</title>
 </head>
 
 <body>
